# ray_tracing_in_a_weekend

./: .gitignore  .gitmodules  CMakeLists.txt  _clang-format  aabb.h  bvh_node.h  camera.h  checker_texture.h  dielectric.h  lambertian.h  main.cpp  material.h  metal.h  moving_sphere.h  object.h  object_list.h  ray.h  ray_tracer.sln  ray_tracer.vcxproj  ray_tracer.vcxproj.filters  sphere.h  texture.h  vec3.h
materials/: dielectric.h  diffuse_light.h  isotropic.h  lambertian.h  material.h  metal.h
math/: math.h  perlin_noise.h  ray.h  vec3.h
objects/: aa_rectangle.h  aabb.h  box.h  bvh_node.h  constant_medium.h  flip_normals.h  moving_sphere.h  object.h  object_list.h  rectangle.h  rotate.h  sphere.h  translate.h
src/: camera.h  main.cpp
src/materials/: diffuse_light.h  isotropic.h  lambertian.h  material.h  metal.h
src/math/: math.h  perlin_noise.h  ray.h
src/objects/: aabb.h  box.h  bvh_node.h  constant_medium.h  moving_sphere.h  object.h  object_list.h  rectangle.h  rotate.h  sphere.h  translate.h
src/textures/: constant_texture.h  image_texture.h  noise_texture.h  texture.h
textures/: checker_texture.h  constant_texture.h  image_texture.h  noise_texture.h  texture.h
